File path update

--- a/partials/footer.html
+++ b/partials/footer.html
@@ -20,21 +20,21 @@
                     <ul class="social-links">
                         <li>
                             <a href="#" aria-label="Facebook">
-                                <img src="../assets/images/icons/facebook.svg" alt="facebook" class="icon"
-                                    loading="lazy" width="24" height="24" decoding="async" />
+                                <img src="assets/images/icons/facebook.svg" alt="facebook" class="icon" loading="lazy"
+                                    width="24" height="24" decoding="async" />
                                 <span>Facebook</span>
                             </a>
                         </li>
                         <li>
                             <a href="#" aria-label="Instagram">
-                                <img src="../assets/images/icons/instagram.svg" alt="instagram" class="icon"
-                                    loading="lazy" width="24" height="24" decoding="async" />
+                                <img src="assets/images/icons/instagram.svg" alt="instagram" class="icon" loading="lazy"
+                                    width="24" height="24" decoding="async" />
                                 <span>Instagram</span>
                             </a>
                         </li>
                         <li>
                             <a href="#" aria-label="X">
-                                <img src="../assets/images/icons/x.svg" alt="X" class="icon" loading="lazy" width="24"
+                                <img src="assets/images/icons/x.svg" alt="X" class="icon" loading="lazy" width="24"
                                     height="24" decoding="async" />
                                 <span>X</span>
                             </a>
