--- a/partials/product.html
+++ b/partials/product.html
@@ -1,42 +1,42 @@
 <div class="product-container">
     <div class="product-gallery">
         <div class="product-preview">
-            <img src="../assets/images/preview_original.png" alt="Product Image" class="product-img"
-                fetchpriority="high" width="500" height="500" decoding="async">
+            <img src="assets/images/preview_original.png" alt="Product Image" class="product-img" fetchpriority="high"
+                width="500" height="500" decoding="async">
             <div class="product-nav">
                 <button class="icon-button left-arrow-button" aria-label="Previous Image">
-                    <img src="../assets/images/icons/slider_arrow_left.svg" alt="Left Arrow" width="38" height="38">
+                    <img src="assets/images/icons/slider_arrow_left.svg" alt="Left Arrow" width="38" height="38">
                 </button>
                 <div class="flex slider-pagination">
-                    <img src="../assets/images/icons/slider_dot_filled.svg" alt="Active Dot" width="8" height="8">
-                    <img src="../assets/images/icons/slider_dot_empty.svg" alt="Empty Dot" width="8" height="8">
-                    <img src="../assets/images/icons/slider_dot_empty.svg" alt="Empty Dot" width="8" height="8">
-                    <img src="../assets/images/icons/slider_dot_empty.svg" alt="Empty Dot" width="8" height="8">
+                    <img src="assets/images/icons/slider_dot_filled.svg" alt="Active Dot" width="8" height="8">
+                    <img src="assets/images/icons/slider_dot_empty.svg" alt="Empty Dot" width="8" height="8">
+                    <img src="assets/images/icons/slider_dot_empty.svg" alt="Empty Dot" width="8" height="8">
+                    <img src="assets/images/icons/slider_dot_empty.svg" alt="Empty Dot" width="8" height="8">
                 </div>
                 <button class="icon-button right-arrow-button" aria-label="Next Image">
-                    <img src="../assets/images/icons/slider_arrow_right.svg" alt="Right Arrow" width="38" height="38">
+                    <img src="assets/images/icons/slider_arrow_right.svg" alt="Right Arrow" width="38" height="38">
                 </button>
             </div>
         </div>
         <div class="product-thumbnails">
             <div class="flex flex-space-between">
-                <img src="../assets/images/preview_original.png" alt="Preview 1" class="preview-img" loading="lazy"
+                <img src="assets/images/preview_original.png" alt="Preview 1" class="preview-img" loading="lazy"
                     width="80" height="80" decoding="async">
-                <img src="../assets/images/preview_2.png" alt="Preview 2" class="preview-img" loading="lazy" width="80"
+                <img src="assets/images/preview_2.png" alt="Preview 2" class="preview-img" loading="lazy" width="80"
                     height="80" decoding="async">
-                <img src="../assets/images/preview_3.png" alt="Preview 3" class="preview-img" loading="lazy" width="80"
+                <img src="assets/images/preview_3.png" alt="Preview 3" class="preview-img" loading="lazy" width="80"
                     height="80" decoding="async">
-                <img src="../assets/images/preview_4.png" alt="Preview 4" class="preview-img" loading="lazy" width="80"
+                <img src="assets/images/preview_4.png" alt="Preview 4" class="preview-img" loading="lazy" width="80"
                     height="80" decoding="async">
             </div>
             <div class="flex flex-space-between">
-                <img src="../assets/images/preview_1.png" alt="Preview 1" class="preview-img" loading="lazy" width="80"
+                <img src="assets/images/preview_1.png" alt="Preview 1" class="preview-img" loading="lazy" width="80"
                     height="80" decoding="async">
-                <img src="../assets/images/preview_2.png" alt="Preview 2" class="preview-img" loading="lazy" width="80"
+                <img src="assets/images/preview_2.png" alt="Preview 2" class="preview-img" loading="lazy" width="80"
                     height="80" decoding="async">
-                <img src="../assets/images/preview_3.png" alt="Preview 3" class="preview-img" loading="lazy" width="80"
+                <img src="assets/images/preview_3.png" alt="Preview 3" class="preview-img" loading="lazy" width="80"
                     height="80" decoding="async">
-                <img src="../assets/images/preview_4.png" alt="Preview 4" class="preview-img" loading="lazy" width="80"
+                <img src="assets/images/preview_4.png" alt="Preview 4" class="preview-img" loading="lazy" width="80"
                     height="80" decoding="async">
             </div>
         </div>
@@ -46,11 +46,11 @@
         <h2 class="product-title">GTG Perfumes</h2>
         <div class="rating-section">
             <div class="stars">
-                <img src="../assets/images/icons/star_full.svg" alt="Star" class="star-icon">
-                <img src="../assets/images/icons/star_full.svg" alt="Star" class="star-icon">
-                <img src="../assets/images/icons/star_full.svg" alt="Star" class="star-icon">
-                <img src="../assets/images/icons/star_full.svg" alt="Star" class="star-icon">
-                <img src="../assets/images/icons/star_half.svg" alt="Star" class="star-icon">
+                <img src="assets/images/icons/star_full.svg" alt="Star" class="star-icon">
+                <img src="assets/images/icons/star_full.svg" alt="Star" class="star-icon">
+                <img src="assets/images/icons/star_full.svg" alt="Star" class="star-icon">
+                <img src="assets/images/icons/star_full.svg" alt="Star" class="star-icon">
+                <img src="assets/images/icons/star_half.svg" alt="Star" class="star-icon">
             </div>
             <span class="rating-number">4.7 (999+ reviews)</span>
         </div>
@@ -89,7 +89,7 @@
                                         <label for="frag-single-original" class="label">Original</label>
                                     </div>
                                     <div class="product-img">
-                                        <img src="../assets/images/product_original.png" alt="Original Fragrance"
+                                        <img src="assets/images/product_original.png" alt="Original Fragrance"
                                             loading="lazy" width="60" height="60" decoding="async">
                                     </div>
                                     <div class="best-seller">BEST-SELLER</div>
@@ -100,7 +100,7 @@
                                         <label for="frag-single-lily" class="label">Lily</label>
                                     </div>
                                     <div class="product-img">
-                                        <img src="../assets/images/product_lily.png" alt="Lily Fragrance" loading="lazy"
+                                        <img src="assets/images/product_lily.png" alt="Lily Fragrance" loading="lazy"
                                             width="60" height="60" decoding="async">
                                     </div>
                                 </div>
@@ -110,7 +110,7 @@
                                         <label for="frag-single-rose" class="label">Rose</label>
                                     </div>
                                     <div class="product-img">
-                                        <img src="../assets/images/product_rose.png" alt="Rose Fragrance" loading="lazy"
+                                        <img src="assets/images/product_rose.png" alt="Rose Fragrance" loading="lazy"
                                             width="60" height="60" decoding="async">
                                     </div>
                                 </div>
@@ -123,15 +123,15 @@
                                 <div class="included-item-monthly">
                                     <label class="label">Every 30 Days</label>
                                     <div class="product-img-lg">
-                                        <img src="../assets/images/product_original.png" alt="Original Fragrance">
+                                        <img src="assets/images/product_original.png" alt="Original Fragrance">
                                     </div>
                                 </div>
                                 <div class="included-item-onetime">
                                     <label class="label">One Time <span>(Free)</span></label>
                                     <div class="product-img">
-                                        <img src="../assets/images/product_original.png" alt="Original Fragrance">
-                                        <img src="../assets/images/product_lily.png" alt="Lily Fragrance">
-                                        <img src="../assets/images/product_rose.png" alt="Rose Fragrance">
+                                        <img src="assets/images/product_original.png" alt="Original Fragrance">
+                                        <img src="assets/images/product_lily.png" alt="Lily Fragrance">
+                                        <img src="assets/images/product_rose.png" alt="Rose Fragrance">
                                     </div>
                                 </div>
                             </div>
@@ -140,17 +140,17 @@
                         <div class="details">
                             <ul class="details-list">
                                 <li class="detail-item">
-                                    <img src="../assets/images/icons/seal_check.svg" alt="check" class="checkmark-icon">
+                                    <img src="assets/images/icons/seal_check.svg" alt="check" class="checkmark-icon">
                                     1 Bottle Shipped Monthly
                                 </li>
-                                <li class="detail-item"><img src="../assets/images/icons/seal_check.svg" alt="check"
+                                <li class="detail-item"><img src="assets/images/icons/seal_check.svg" alt="check"
                                         class="checkmark-icon"><span>Free</span> Sampler For Original, Lily And Rose
                                     Fragrances</li>
-                                <li class="detail-item"><img src="../assets/images/icons/seal_check.svg" alt="check"
+                                <li class="detail-item"><img src="assets/images/icons/seal_check.svg" alt="check"
                                         class="checkmark-icon"><span>50% OFF Shipping</span></li>
-                                <li class="detail-item"><img src="../assets/images/icons/seal_check.svg" alt="check"
+                                <li class="detail-item"><img src="assets/images/icons/seal_check.svg" alt="check"
                                         class="checkmark-icon">Pause or Cancel Anytime after 3 months minimum</li>
-                                <li class="detail-item"><img src="../assets/images/icons/seal_check.svg" alt="check"
+                                <li class="detail-item"><img src="assets/images/icons/seal_check.svg" alt="check"
                                         class="checkmark-icon">28 Day Money Back Guarantee*</li>
                             </ul>
                         </div>
@@ -181,7 +181,7 @@
                                     <label for="frag-double-1-original" class="label">Original</label>
                                 </div>
                                 <div class="product-img">
-                                    <img src="../assets/images/product_original.png" alt="Original Fragrance">
+                                    <img src="assets/images/product_original.png" alt="Original Fragrance">
                                 </div>
                                 <div class="best-seller">BEST-SELLER</div>
                             </div>
@@ -191,7 +191,7 @@
                                     <label for="frag-double-1-lily" class="label">Lily</label>
                                 </div>
                                 <div class="product-img">
-                                    <img src="../assets/images/product_lily.png" alt="Lily Fragrance">
+                                    <img src="assets/images/product_lily.png" alt="Lily Fragrance">
                                 </div>
                             </div>
                             <div class="rose">
@@ -200,7 +200,7 @@
                                     <label for="frag-double-1-rose" class="label">Rose</label>
                                 </div>
                                 <div class="product-img">
-                                    <img src="../assets/images/product_rose.png" alt="Rose Fragrance">
+                                    <img src="assets/images/product_rose.png" alt="Rose Fragrance">
                                 </div>
                             </div>
                         </div>
@@ -216,7 +216,7 @@
                                     <label for="frag-double-2-original" class="label">Original</label>
                                 </div>
                                 <div class="product-img">
-                                    <img src="../assets/images/product_original.png" alt="Original Fragrance">
+                                    <img src="assets/images/product_original.png" alt="Original Fragrance">
                                 </div>
                                 <div class="best-seller">BEST-SELLER</div>
                             </div>
@@ -226,7 +226,7 @@
                                     <label for="frag-double-2-lily" class="label">Lily</label>
                                 </div>
                                 <div class="product-img">
-                                    <img src="../assets/images/product_lily.png" alt="Lily Fragrance">
+                                    <img src="assets/images/product_lily.png" alt="Lily Fragrance">
                                 </div>
                             </div>
                             <div class="rose">
@@ -235,7 +235,7 @@
                                     <label for="frag-double-2-rose" class="label">Rose</label>
                                 </div>
                                 <div class="product-img">
-                                    <img src="../assets/images/product_rose.png" alt="Rose Fragrance">
+                                    <img src="assets/images/product_rose.png" alt="Rose Fragrance">
                                 </div>
                             </div>
                         </div>
@@ -247,15 +247,15 @@
                             <div class="included-item-monthly">
                                 <label class="label">Every 30 Days</label>
                                 <div class="product-img-lg">
-                                    <img src="../assets/images/product_original.png" alt="Original Fragrance">
+                                    <img src="assets/images/product_original.png" alt="Original Fragrance">
                                 </div>
                             </div>
                             <div class="included-item-onetime">
                                 <label class="label">One Time <span>(Free)</span></label>
                                 <div class="product-img">
-                                    <img src="../assets/images/product_original.png" alt="Original Fragrance">
-                                    <img src="../assets/images/product_lily.png" alt="Lily Fragrance">
-                                    <img src="../assets/images/product_rose.png" alt="Rose Fragrance">
+                                    <img src="assets/images/product_original.png" alt="Original Fragrance">
+                                    <img src="assets/images/product_lily.png" alt="Lily Fragrance">
+                                    <img src="assets/images/product_rose.png" alt="Rose Fragrance">
                                 </div>
                             </div>
                         </div>
@@ -264,17 +264,17 @@
                     <div class="details">
                         <ul class="details-list">
                             <li class="detail-item">
-                                <img src="../assets/images/icons/seal_check.svg" alt="check" class="checkmark-icon">
+                                <img src="assets/images/icons/seal_check.svg" alt="check" class="checkmark-icon">
                                 1 Bottle Shipped Monthly
                             </li>
-                            <li class="detail-item"><img src="../assets/images/icons/seal_check.svg" alt="check"
+                            <li class="detail-item"><img src="assets/images/icons/seal_check.svg" alt="check"
                                     class="checkmark-icon"><span>Free</span> Sampler For Original, Lily And Rose
                                 Fragrances</li>
-                            <li class="detail-item"><img src="../assets/images/icons/seal_check.svg" alt="check"
+                            <li class="detail-item"><img src="assets/images/icons/seal_check.svg" alt="check"
                                     class="checkmark-icon"><span>50% OFF Shipping</span></li>
-                            <li class="detail-item"><img src="../assets/images/icons/seal_check.svg" alt="check"
+                            <li class="detail-item"><img src="assets/images/icons/seal_check.svg" alt="check"
                                     class="checkmark-icon">Pause or Cancel Anytime after 3 months minimum</li>
-                            <li class="detail-item"><img src="../assets/images/icons/seal_check.svg" alt="check"
+                            <li class="detail-item"><img src="assets/images/icons/seal_check.svg" alt="check"
                                     class="checkmark-icon">28 Day Money Back Guarantee*</li>
                         </ul>
                     </div>
