--- a/partials/stats.html
+++ b/partials/stats.html
@@ -63,7 +63,7 @@
 
     <!-- RIGHT -->
     <div class="collection-image">
-        <img src="../assets/images/frame.png" alt="Perfume spray in hand" class="spray-img" loading="lazy" width="400"
+        <img src="assets/images/frame.png" alt="Perfume spray in hand" class="spray-img" loading="lazy" width="400"
             height="600" decoding="async" />
     </div>
 
