--- a/partials/table.html
+++ b/partials/table.html
@@ -11,28 +11,28 @@
 					<th scope="col"
 						class="comparison-cell comparison-cell-head comparison-highlight comparison-highlight-top">
 						<div class="comparison-brand-img">
-							<img src="../assets/images/gtg-bottle.png" alt="GTG bottle" loading="lazy" width="60"
+							<img src="assets/images/gtg-bottle.png" alt="GTG bottle" loading="lazy" width="60"
 								height="60" decoding="async" />
 						</div>
 						<span class="comparison-brand-name">GTG</span>
 					</th>
 					<th scope="col" class="comparison-cell comparison-cell-head">
 						<div class="comparison-brand-img">
-							<img src="../assets/images/preview_1.png" alt="Arose bottle" loading="lazy" width="60"
+							<img src="assets/images/preview_1.png" alt="Arose bottle" loading="lazy" width="60"
 								height="60" decoding="async" />
 						</div>
 						<span class="comparison-brand-name">Arose</span>
 					</th>
 					<th scope="col" class="comparison-cell comparison-cell-head">
 						<div class="comparison-brand-img">
-							<img src="../assets/images/preview_3.png" alt="Bella bottle" loading="lazy" width="60"
+							<img src="assets/images/preview_3.png" alt="Bella bottle" loading="lazy" width="60"
 								height="60" decoding="async" />
 						</div>
 						<span class="comparison-brand-name">Bella</span>
 					</th>
 					<th scope="col" class="comparison-cell comparison-cell-head">
 						<div class="comparison-brand-img">
-							<img src="../assets/images/preview_4.png" alt="Daisies bottle" loading="lazy" width="60"
+							<img src="assets/images/preview_4.png" alt="Daisies bottle" loading="lazy" width="60"
 								height="60" decoding="async" />
 						</div>
 						<span class="comparison-brand-name">Daisies</span>
